--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- angular-animate -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
